[package]
name = "crab-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.20.1"
globset = "0.4.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlite = "0.37.0"
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
tempfile = "3"
